--- a/front-end/index.html
+++ b/front-end/index.html
@@ -40,7 +40,7 @@
         </div>
         <img class="card-image" src="img/jeri.jpeg" alt="Jericoacoara">
         <div class="card-content">
-          <h1>Pacote 5 noites em Jericoacoara</h1>
+          <h1>Pacote Paraíso Jeri</h1>
           <ul>
             <li><i data-feather="coffee"></i>Café da manhã incluso</li>
             <li><i data-feather="wifi"></i>Wi-Fi</li>
@@ -58,7 +58,7 @@
         </div>
         <img class="card-image" src="img/ssa.jpeg" alt="Salvador">
         <div class="card-content">
-          <h1>Pacote 10 dias em Salvador</h1>
+          <h1>Pacote Vou ali em Salvador</h1>
           <ul>
             <li><i data-feather="coffee"></i>Café da manhã incluso</li>
             <li><i data-feather="wifi"></i>Wi-Fi</li>
@@ -76,7 +76,7 @@
         </div>
         <img class="card-image" src="img/rj.jpeg" alt="Rio de Janeiro">
         <div class="card-content">
-          <h1>Pacote 4 noites no Rio de Janeiro</h1>
+          <h1>Pacote Rio cidade maravilhosa</h1>
           <ul>
             <li><i data-feather="coffee"></i>Café da manhã incluso</li>
             <li><i data-feather="wifi"></i>Wi-Fi</li>
@@ -92,8 +92,8 @@
       <div class="card">
 
         <div class="card-content">
-          <h3>Alagoas</h3>
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing sciunt deserunt, alias illo!</p>
+          <h3>Jericoacoara</h3>
+          <p>Viva as belezas da Lagoa do Paraiso e da Pedra Furada.</p>
         </div>
         <button>Saiba mais</button>
       </div>
@@ -101,8 +101,8 @@
       <div class="card">
 
         <div class="card-content">
-          <h3>Fortaleza</h3>
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing sciunt deserunt, alias illo!</p>
+          <h3>Salvador</h3>
+          <p>Conheça as belezas do Pelourinho e do Farol da Barra.</p>
         </div>
         <button>Saiba mais</button>
       </div>
@@ -110,8 +110,8 @@
       <div class="card">
 
         <div class="card-content">
-          <h3>Natal</h3>
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing sciunt deserunt, alias illo!</p>
+          <h3>Rio de Janeiro</h3>
+          <p>Conheça a vista maravilhosa do Cristo Redentor e do Pão de Açúcar.</p>
         </div>
         <button>Saiba mais</button>
       </div>
@@ -122,12 +122,12 @@
     <div class="contato-card">
       <h1>Entre em contato</h1>
       <ul>
-        <li><i data-feather="map-pin"></i>Avenida Oceânica, 93, Barra-Salvador/BA</li>
+        <li><i data-feather="map-pin"></i>Barra, 93 - Salvador/BA</li>
         <li><i data-feather="mail"></i>contato@dendeagenciadeviagens.com</li>
         <li><i data-feather="phone"></i>(71) 4100-0041</li>
       </ul>
     </div>
-    <!--The div element for the map -->
+
     <div id="map"></div>
   </section>
 
@@ -144,15 +144,12 @@
         });
       });
     });
-    // Initialize and add the map
+
     function initMap() {
-      // The location of Uluru
-      // var uluru = {lat: -25.344, lng: 131.036};
+
       var uluru = { lat: -13.00974, lng: -38.53117 };
-      // The map, centered at Uluru
       var map = new google.maps.Map(
         document.getElementById('map'), { zoom: 4, center: uluru });
-      // The marker, positioned at Uluru
       var marker = new google.maps.Marker({ position: uluru, map: map });
     }
   </script>
